  b - TRQ-3185. Create subdirs when server attribute use_job_subdirs set.
  e - TRQ-2836. Make node health check run on sister nodes when configured for job
      start and job end as well.
  e - TRQ-2843. Add the qmgr setting dont_write_nodes_file to make it so that nodes
      cannot be edited dynamically
  f - TRQ-2897. Add the ability to adopt running processes into a job with pbs_track.


5.1.1
  b - TRQ-2947. Fix a race condition on deleting jobs which are failing to start.
  c - TRQ-3068. Fix a race condition where a job may be deleted but have it's pointer
      may still be in the alljobs container.
  b - TRQ-2753. Fix a memory leak in generating the authoritative okclients list.
  b - TRQ-2332. Fix a job dependency problem when the failover server comes up. This
      only affects users running high availability.
  b - TRQ-3023. Fix a bug when ALPS incorrectly returns a permanent confirmation failure.
  b - TRQ-2833. Set CUDA_VISIBLE_DEVICES to only the indices for this host when
      it will be set. 
  f - TRQ-2782. Distribute job files into subdirectories when server attribute
      use_jobs_subdirs set to true. Default is false (do not distribute job files).
  b - TRQ-3116. Make qsub only retry on transient errors.
  b - TRQ-3122. Fix a problem with login_property not working correctly (cray only).
  b - TRQ-3114. Fix an issue where an asynchronously started job is stuck with a 
      substate of starting after a failed job start.
  b - TRQ-3110. Handle slot limits correctly when jobs are preempted.
  e - TRQ-3095. Add the server setting disable_automatic_requeue to stop jobs from being
      requeued if they experience a transient failure on the mom.
  e - TRQ-2307. Fix probelms where mom restarts intermittently fail.
  b - TRQ-2946. Make qmgr able to handle Cray numeric node ids.
  b - TRQ-2790. Make offlining cray compute nodes persist across restarts. 
  e - TRQ-3104. Add millisecond precision to the Torque log file